<resources>
    <string name="app_name">Car Pooling</string>
    <string name="preference_file_key" translatable="false">it.polito.mad.backToNokia.carpooling.preference_file_key</string>
    <string name="file_provider" translatable="false">it.polito.mad.backToNokia.carpooling.file_provider</string>
    <string name="name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="email_address">email@address.com</string>
    <string name="location">Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_edit_profile">Edit profile</string>
    <string name="drawer_trips">Your trips</string>
    <string name="drawer_trip_details">Trip details</string>
    <string name="drawer_trip_edit">Edit trip</string>
    <string name="drawer_logout" translatable="false">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_save">Save</string>
    <string name="no_trip_available">No trip advertisements available at this moment. Add one!</string>
    <string name="car_image">Car image</string>
    <string name="departure_and_arrival_location">Departure and arrival location</string>
    <string name="departure_date_and_time">Departure date and time</string>
    <string name="number_of_available_seats">Number of available seats</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="add_a_trip">Add a trip</string>
    <string name="from_a">From A</string>
    <string name="to_b">To B</string>
    <string name="intermediate_stops">Intermediate stops</string>
    <string name="departure_location">Departure location</string>
    <string name="arrival_location">Arrival location</string>
    <string name="departure_date">Departure date</string>
    <string name="departure_time">Departure time</string>
    <string name="estimated_trip_duration">Estimated trip duration</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="available_seats">Available seats</string>
    <string name="description">Description</string>
    <string name="optional">Optional</string>
    <string name="error_description">Error: please, insert a description</string>
    <string name="error_price">Error: please, insert a price</string>
    <string name="error_seats">Error: please, insert a number</string>
    <string name="error_minutes">Error: please, insert a minutes duration</string>
    <string name="error_minutes_valid">Error: please, insert a valid minutes duration</string>
    <string name="error_hours">Error: please, insert a hours duration</string>
    <string name="error_hours_valid">Error: please, insert a valid hours duration</string>
    <string name="error_time">Error: please, insert a time</string>
    <string name="error_date">Error: please, insert a date</string>
    <string name="error_loc">Error: please, insert a location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hours_and">hours and </string>
    <string name="minutes">minutes</string>
    <string name="min_available_seats">available seats</string>
    <string name="departure_on">Departure on</string>
    <string name="at">at </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="others_trips">Home</string>
    <string name="sign_in">Sign-in</string>
    <string name="drawer_booking">Your booking</string>
    <string name="users_interested">Users interested</string>
    <string name="no_others_trip_available">No trip advertisements available at this moment.</string>
    <string name="seats">Seats</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="interested">I\'m interested!</string>
    <string name="no_reservations">No reservations made available.</string>
    <string name="no_users_interested">No users are interested yet</string>
    <string name="accept">Accept</string>
    <string name="error_date_past">Error: date cannot be in the past</string>
    <string name="error_seats_0">Error: please insert a number greater than 0</string>
    <string name="trips_of_interest">Trips of interest</string>
    <string name="rate_now">RATE NOW!</string>
    <string name="rated">RATED!</string>
    <string name="already_interested">You are already interested in the trip</string>
    <string name="already_rated">You have already rated!</string>
    <string name="already_rated_passengers">You have already rated all the passengers!</string>
    <string name="rate">Rate</string>
    <string name="rate_passengers">Rate the passengers</string>
    <string name="rate_driver">Rate the driver</string>
    <string name="bookings">Bookings</string>
    <string name="rating_passenger">Rating as passenger</string>
    <string name="rating_driver">Rating as driver</string>
    <string name="ratings">ratings</string>
    <string name="add_comment">Add a comment...</string>
    <string name="delete_trip">Delete trip</string>
    <string name="colon" translatable="false">:</string>
    <string name="map">MAP</string>
    <string name="estimated_stops">Estimated stops</string>
    <string name="time">Time</string>
    <string name="add_a_stop">Add a stop</string>
    <string name="show_map">Route detail</string>
    <string name="missing_field">Fill out all mandatory fields</string>
    <string name="Home">Home</string>
</resources>