<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trip_list_other"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_trip_list"
            android:icon="@drawable/ic_menu_other_trips"
            android:title="@string/drawer_trips" />
        <item
            android:id="@+id/nav_interest_list"
            android:icon="@drawable/like_icon"
            android:title="@string/trips_of_interest" />
        <item
            android:id="@+id/nav_booking_list"
            android:icon="@drawable/ic_menu_booking_list"
            android:title="@string/drawer_booking" />
        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_menu_user_profile"
            android:title="@string/drawer_profile" />
    </group>
</menu>