<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_adv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="32dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/image_car_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                card_view:srcCompat="@drawable/car"
                android:contentDescription="@string/car_image" />

            <TextView
                android:id="@+id/departure_arrival_location_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/departure_and_arrival_location"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="#80000000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/departure_date_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_date_and_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/available_seats_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_available_seats"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/edit_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/edit"
                android:textColor="@color/blue_darker"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>