<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_trip_list_other">

    <fragment
        android:id="@+id/nav_trip_list"
        android:name="it.polito.mad.backToNokia.carpooling.ui.trip.TripListFragment"
        android:label="@string/drawer_trips"
        tools:layout="@layout/fragment_trip_list">
        <action
            android:id="@+id/action_nav_trip_list_to_nav_trip_details"
            app:destination="@id/nav_trip_details"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"></action>
        <action
            android:id="@+id/action_nav_trip_list_to_nav_trip_edit"
            app:destination="@id/nav_trip_edit"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"></action>
    </fragment>

    <fragment
        android:id="@+id/nav_trip_details"
        android:name="it.polito.mad.backToNokia.carpooling.ui.trip.TripDetailsFragment"
        android:label="@string/drawer_trip_details"
        tools:layout="@layout/fragment_trip_details" >
        <action
            android:id="@+id/action_nav_trip_details_to_nav_trip_edit"
            app:destination="@id/nav_trip_edit"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"></action>
        <action
            android:id="@+id/action_nav_trip_details_to_nav_trip_users_interested"
            app:destination="@id/nav_trip_users_interested"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_trip_details_to_nav_show_map"
            app:destination="@id/nav_show_map"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out">
            <argument
                android:name="trip"
                app:argType="it.polito.mad.backToNokia.carpooling.model.Trip" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_trip_edit"
        android:name="it.polito.mad.backToNokia.carpooling.ui.trip.TripEditFragment"
        android:label="@string/drawer_trip_edit"
        tools:layout="@layout/fragment_trip_edit" >
        <action
            android:id="@+id/action_nav_trip_edit_to_nav_trip_list"
            app:destination="@id/nav_trip_list"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_profile"
        android:name="it.polito.mad.backToNokia.carpooling.ui.profile.ShowProfileFragment"
        android:label="@string/drawer_profile"
        tools:layout="@layout/fragment_show_profile" >
        <action
            android:id="@+id/action_nav_show_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="it.polito.mad.backToNokia.carpooling.ui.profile.EditProfileFragment"
        android:label="@string/drawer_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/nav_trip_list_other"
        android:name="it.polito.mad.backToNokia.carpooling.ui.trip.OthersTripListFragment"
        android:label="@string/others_trips"
        tools:layout="@layout/fragment_other_trip_list" >
        <action
            android:id="@+id/action_nav_trip_list_other_to_nav_trip_details"
            app:destination="@id/nav_trip_details"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_trip_list_other_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_trip_users_interested"
        android:name="it.polito.mad.backToNokia.carpooling.ui.trip.TripUserInterestedFragment"
        android:label="@string/users_interested"
        tools:layout="@layout/fragment_trip_user_interested" >
        <action
            android:id="@+id/action_nav_user_interested_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

    </fragment>
    <fragment
        android:id="@+id/nav_booking_list"
        android:name="it.polito.mad.backToNokia.carpooling.ui.booking.BoughtTripsListFragment"
        android:label="@string/drawer_booking"
        tools:layout="@layout/fragment_booking_list" >
        <action
            android:id="@+id/action_nav_booking_list_to_nav_trip_details"
            app:destination="@id/nav_trip_details"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_trip_list_other_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_interest_list"
        android:name="it.polito.mad.backToNokia.carpooling.ui.booking.TripsOfInterestListFragment"
        android:label="@string/trips_of_interest"
        tools:layout="@layout/fragment_trips_of_interest_list">
        <action
            android:id="@+id/action_nav_interest_list_to_nav_trip_details"
            app:destination="@id/nav_trip_details"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_trip_list_other_to_nav_show_profile"
            app:destination="@id/nav_show_profile"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_show_map"
        android:name="it.polito.mad.backToNokia.carpooling.ShowMapFragment"
        android:label="@string/show_map"
        tools:layout="@layout/fragment_show_map" >
        <argument
            android:name="trip"
            app:argType="it.polito.mad.backToNokia.carpooling.model.Trip" />
    </fragment>


</navigation>