<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_adv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ciano"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/other_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                card_view:srcCompat="@drawable/user_icon" />

            <TextView
                android:id="@+id/other_user_nick"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:textColor="@color/blue_darker"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rate_now"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:paddingEnd="8dp"
                android:textColor="@color/blue_darker"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/booked_icon"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="3dp"
                card_view:srcCompat="@drawable/ic_menu_booking_list"
                android:visibility="gone"
                android:tintMode="src_atop"
                app:tint="@color/blue_darker"
                />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:id="@+id/interested_icon"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="3dp"
                card_view:srcCompat="@drawable/like_icon"
                android:visibility="gone"
                android:tintMode="src_atop"
                app:tint="@color/blue_darker"
                />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/image_car_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                card_view:srcCompat="@drawable/car"
                android:contentDescription="@string/car_image" />

            <TextView
                android:id="@+id/departure_arrival_location_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/departure_and_arrival_location"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="#80000000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/departure_date_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_date_and_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/available_seats_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_available_seats"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>